overlapping issue solved

--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,15 @@
+body {
+	margin: 0px;
+}
+
 header{
 	background-color: #81AE40;
 	color: white;
    font-family: 'Merriweather', serif;
    position: fixed;
-   margin-left: 270px;
+   margin-top: 0px;
+   margin-left: 0px;
+
 
 }
 
@@ -12,11 +18,12 @@ header li
 	display: inline;
     text-decoration: none;
     float: right;
-    font-size: 15px
+    font-size: 15px;
 }
  header li:hover{
 	font-size: 20px;
 }
+
 p{
 	text-align: center;
 	font-size: 20px;
@@ -35,16 +42,20 @@ section li{
 }
 article{
 	font-size: 15px;
-	font-family: 'Raleway', sans-serif;
-	background-color: #FFA500;
-	color:#FFFFFF;
+    font-family: 'Raleway', sans-serif;
+    background-color: #FFA500;
+    color: #FFFFFF;
+	
 
+}
+.overlap{
+	margin-top: 15%;
 }
 aside{
 	color: #000000;
 	font-size: 25px;
 	font-family: 'Alegreya SC', serif;
-	padding: 15px
+	padding: 15px;
 }
 footer{
 	background-color: #DCDCDC;
